<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mumbai</string>
    <string name="facebook_id">690082961010008</string>
    <string name="facebook_login_title">Conectar com conta do Facebook</string>
    <string name="menu_create">Criar</string>
    <string name="menu_search">Procurar</string>
    <string name="menu_detail">Detalhes</string>
    <string name="menu_location">Localização Atual</string>
    <string name="menu_configuration">Configuração</string>
    <string name="menu_paraformalidade">Paraformalidade</string>
    <string name="menu_paraformalidades">Paraformalidades</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_save">Salvar</string>
    <string name="menu_update">Atualizar</string>
    <string name="menu_clear">Limpar</string>
    <string name="menu_back">Voltar</string>
    <string name="menu_options">Opções</string>
    <string name="menu_ok">Confirmar</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="activity_account_facebook_title">Conta Faceboo</string>
    <string name="activity_account_google_title">Conta Google</string>
    <string name="activity_account_twitter_title">Conta Twitter</string>
    <string name="settings_title">Configurações</string>
    <string name="settings_categoryAccount">Conta</string>
    <string name="settings_categoryAdvance">Avançado</string>
    <string name="settings_categoryAbout">Sobre</string>
    <string name="settings_accountDefault">Criar/Logar Conta</string>
    <string name="settings_account">\@Conta</string>
    <string name="settings_accounts">Contas</string>
    <string name="settings_sync">Sincronização</string>
    <string name="settings_syncSumm">Automático</string>
    <string name="settings_syncSummLastUpdate">Sincronizado </string>
    <string name="settings_notif">Notificação</string>
    <string name="settings_notifSumm">Mostrar no Sistema</string>
    <string name="settings_highResolution">Alta Resolução</string>
    <string name="settings_highResolutionSumm">Imagens com maior definição</string>
    <string name="settings_aboutVersion">Versão</string>
    <string name="settings_aboutDeveloper">Developer</string>
    <string name="settings_compilation">Compilação</string>
    <string name="settings_accountBound">Conta Vinculada</string>
    <string name="settings_accountNoBound">Sem Vinculo</string>
    <string name="settings_accountGoogle">Conta Google</string>
    <string name="settings_accountFacebook">Conta Facebook</string>
    <string name="settings_accountTwitter">Conta Twitter</string>
    <string name="settings_helper">Ajudar</string>
    <string name="settings_helperInf">Informações Úteis</string>
    <string name="settings_helperAboutPlataforma">Sobre a Plataforma</string>
    <string name="settings_helperAboutPlataformaInfo">Saiba mais sobre paraformalidades</string>
    <string name="settings_user_detail">ID de Usuário</string>
    <string name="settings_email">Email</string>
    <string name="settings_gender">Gênero</string>
    <string name="settings_born">Data de Nascimento</string>
    <string name="detail_share">Compartilhar</string>
    <string name="detail_send">Enviar</string>
    <string name="detail_download">Baixar Imagen</string>
    <string name="detail_edit">Editar</string>
    <string name="detail_label_registered_activity">Atividade Registrada</string>
    <string name="detail_label_equipment_mobility">Mobilidade</string>
    <string name="detail_label_sense">Sentidos</string>
    <string name="detail_label_localization_space">Espaço</string>
    <string name="detail_label_shift">Período</string>
    <string name="detail_label_contributor">Contribuidor</string>
    <string name="detail_label_captured">Capturado</string>
    <string name="detail_label_description">Sobre</string>
    <string name="detail_label_equipment_instalation">Instalação</string>
    <string name="edit_title">Criar/Editar</string>
    <string name="edit_imgDetail">Detalhes da Imagem</string>
    <string name="edit_btnUpload">Carregar Image</string>
    <string name="edit_description">Descrição</string>
    <string name="edit_send">Enviar</string>
    <string name="edit_settings">Configurações</string>
    <string name="search_title">Filtrar</string>
    <string name="search_subTitle">Use Tags</string>
    <string name="search_discard">Limpar Filtros</string>
    <string name="search_filter">Filtrar</string>
    <string name="search_settings">Configuracação</string>
    <string name="alert_principal_GPSNotConnected">Habilite seu GPS</string>
    <string name="alert_principal_GPSFailed">Falha ao obter local por GPS</string>
    <string name="alert_edit_title">Paraformalidade</string>
    <string name="alert_edit_message">Enviada com sucesso!</string>
    <string name="alert_edit_chooseUploadTitle">Escolha</string>
    <string name="alert_edit_chooseUploadMessage"></string>
    <string name="alert_principal_database_sucess">Acesso Offline</string>
    <string name="alert_principal_database_not_sucess">Acesso apenas Online</string>
    <string name="settings_helperCenter">Central de Ajuda</string>
    <string name="alert_settings_saveSuccess">Configuração Salva</string>
    <string name="alert_settings_notSaveSucess">Erro ao Salvar Configuração</string>
    <string name="api_is_on_air">Está no Ar</string>
    <string name="api_what">Aguarde</string>
    <string name="api_is_no_on_air">Não está no Ar</string>
    <string name="api_welcome_back">Bem Vindo Novamente!</string>
    <string name="api_welcome">Bem Vindo!</string>
    <string name="api_success_login">Usuário Logado com sucesso!</string>
    <string name="api_error_login">Oops! Erro ao conectar usuário, tente mais tarde</string>
    <string name="api_error_login_id">Oops! Erro ao recuperar o ID do usuário, tente mais tarde</string>
    <string name="api_error_server">Oops! Um erro ocorreu no servidor, tente mais tarde</string>
    <string name="api_error_get_paraformalidade">Não foi possível carregar as Paraformalidades</string>
    <string name="api_error_get_scenes">Não foi possíve carregar as Cenas</string>
    <string name="paraformalidade_scene_diferent">Paraformalidade não pertence a cena</string>
    <string name="scene_paraformalidade">Paraformalidade</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_logout_from_google">Logout from Google</string>
    <string name="account_revoke_access">Revoke Access</string>
    <string name="account_welcome_back">Bem Vindo</string>
    <string name="account_logged_twitter">Você já está logado</string>
    <string name="account_login_twitter">Logar</string>
    <string name="account_not_logged_twitter">Utilize uma conta Twitter</string>
    <string name="account_without_email_twitter">Insira um email válido</string>
    <string name="account_internet_offline_twitter">Logar com  conta</string>
    <string name="account_loggout_twitter">Desconectar conta</string>
    <string name="account_complete_twitter">Complete seus dados para finalizar seu cadastro</string>
    <string name="account_save_twitter">Finalizar Cadastro</string>
</resources>
