<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_categoryAccount">
        <PreferenceScreen
            android:key="settings_accountLogged"
            android:title="@string/settings_accounts"
            android:summary="@string/settings_accountNoBound"
            android:persistent="false">
            <PreferenceScreen
                android:id="@+id/setting_accountGoogle"
                android:key="setting_accountGoogle"
                android:title="@string/settings_accountGoogle"
                android:icon="@drawable/ic_account_google"
                android:summary="@string/settings_accountNoBound"
                android:editable="false">
            </PreferenceScreen>
            <PreferenceScreen
                android:id="@+id/setting_accountFacebook"
                android:key="setting_accountFacebook"
                android:icon="@drawable/ic_account_facebook"
                android:title="@string/settings_accountFacebook"
                android:summary="@string/settings_accountNoBound"
                android:focusable="false"
                android:editable="false">
            </PreferenceScreen>
            <PreferenceScreen
                android:id="@+id/setting_accountTwitter"
                android:title="@string/settings_accountTwitter"
                android:icon="@drawable/ic_account_twitter"
                android:summary="@string/settings_accountNoBound"
                android:inputType="none"
                android:editable="false">
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_categoryAdvance">
        <CheckBoxPreference
            android:id="@+id/settings_sync"
            android:key="settings_sync"
            android:title="@string/settings_sync"
            android:summary="@string/settings_syncSumm"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:id="@+id/setting_notification"
            android:key="setting_notification"
            android:title="@string/settings_notif"
            android:summary="@string/settings_notifSumm"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:id="@+id/settings_imgHighResolution"
            android:key="settings_imgHighResolution"
            android:title="@string/settings_highResolution"
            android:summary="@string/settings_highResolutionSumm"
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_categoryAbout">
        <PreferenceScreen
            android:id="@+id/settings_screenVersion"
            android:key="settings_screenVersion"
            android:title="@string/settings_aboutVersion">
            <EditTextPreference
                android:id="@+id/settings_version"
                android:key="settings_version"
                android:title="@string/settings_aboutVersion">
            </EditTextPreference>
            <EditTextPreference
                android:id="@+id/settings_developer"
                android:key="settings_developer"
                android:title="@string/settings_aboutDeveloper"
                android:focusable="false">
            </EditTextPreference>
            <EditTextPreference
                android:id="@+id/settings_compilation"
                android:key="settings_compilation"
                android:title="@string/settings_compilation"
                android:inputType="none">
            </EditTextPreference>
            <EditTextPreference
                android:id="@+id/settings_detail"
                android:key="settings_user"
                android:title="@string/settings_user_detail"
                android:summary="None"
                android:inputType="none">
            </EditTextPreference>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/settings_helper"
            android:summary="@string/settings_helperInf">
            <PreferenceScreen
                android:id="@+id/settings_helperAboutPlataforma"
                android:key="settings_helperAboutPlataforma"
                android:title="@string/settings_helperAboutPlataforma"
                android:summary="@string/settings_helperAboutPlataformaInfo">
            </PreferenceScreen>
            <PreferenceScreen
                android:id="@+id/settings_helperCenter"
                android:key="settings_helperCenter"
                android:title="@string/settings_helperCenter">
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>