<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Mumbai" >

    <item
        android:id="@+id/menu_top_search_location"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="withText|ifRoom"/>
    <item android:id="@+id/menu_top_search_create"
        android:title="@string/menu_create"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="never" />
    <item android:id="@+id/menu_top_search_settings"
        android:title="@string/menu_configuration"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
