<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="plataformaparaformal.mumbai.Edit" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/gray_strong"
        android:weightSum="1">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_img"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="center"
                android:contentDescription="@string/edit_imgDetail"
                android:minHeight="150dp"
                android:minWidth="150dp"
                android:src="@drawable/ic_camera">
            </ImageView>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:gravity="top"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/white"
            android:weightSum="4"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/detail_img_send"
                    android:src="@drawable/ic_action_send_now"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_share"
                    android:id="@+id/detail_img_share" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_download"
                    android:id="@+id/detail_img_download" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_edit"
                    android:id="@+id/detail_img_edit" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_send"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/detail_label_send" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_share"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/detail_label_share" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_download"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/detail_label_download" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_edit"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/detail_label_edit" />

            </TableRow>

        </TableLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_weight="0.25">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:weightSum="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_description"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_description"
                    android:layout_weight="5"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_registered_activity"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_registered_activity"
                    android:layout_weight="3"/>

            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_equipment_mobility"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_equipment_mobility"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_sense"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_sense"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_localization_space"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_localization_space"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_shift"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_shift"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_equipment_instalation"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_equipment_instalation"
                    android:layout_weight="3"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/white"
            android:weightSum="4">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_contributor"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_contributor"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_captured"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:id="@+id/detail_label_captured"
                    android:layout_weight="3"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</FrameLayout>
